Fixed TechStack icon

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                             <img src="assets/tech/CSS3.png" alt="CSS3">
                         </div>
                         <div class="tech-icon" title="JavaScript">
-                            <img src="assets/tech/javascript.png" alt="JavaScript">
+                            <img src="assets/tech/javaScript.png" alt="JavaScript">
                         </div>
                         <div class="tech-icon" title="Bootstrap">
                             <img src="assets/tech/Bootstrap.png" alt="Bootstrap">
