Gait and CFS implemented

--- a/index.html
+++ b/index.html
@@ -1058,20 +1058,24 @@
 <div id="gait-slideshow-overlay" class="slideshow-overlay hidden" aria-hidden="true">
     <div class="slideshow-container" id="gait-slideshow-container">
         <div class="slideshow-slide">
-            <img src="assets/gait/gait1.jpg" alt="Gait Analysis Application">
-            <p>Created an AI-powered application that analyzes walking patterns to detect mobility issues and potential health concerns, facilitating early intervention.</p>
+            <img src="assets/Gait/Gait1.jpg" alt="Gait Analysis Application">
+            <p>Designed a web-based gait analysis system that uses computer vision (MetaPipe) to assess a person's walking patterns and provide health insights.</p>
         </div>
         <div class="slideshow-slide">
-            <img src="assets/gait/gait2.jpg" alt="Motion Capture System">
-            <p>Implemented a sophisticated motion capture system that accurately tracks body movements and generates detailed analyses of gait patterns.</p>
+            <img src="assets/Gait/Gait1.jpg" alt="Gait Analysis Application">
+            <p>Here, test instructions with my audio is implemented to add a more human touch if user is unable to read English. A tutorial video is also implemented to provide visual understanding. GIF reactions are implemented to keep user interested in continuing the assessment. </p>
         </div>
         <div class="slideshow-slide">
-            <img src="assets/gait/gait3.jpg" alt="AI Analysis Dashboard">
-            <p>Developed an intuitive dashboard displaying AI-generated insights, highlighting abnormalities and suggesting potential interventions for healthcare providers.</p>
+            <img src="assets/Gait/Gait2.jpg" alt="Motion Capture System">
+            <p>When starting analysis, a timer of 3 seconds will be provided for user to prepare.</p>
         </div>
         <div class="slideshow-slide">
-            <img src="assets/gait/gait4.jpg" alt="Patient Progress Tracking">
-            <p>Created a comprehensive progress tracking system enabling healthcare professionals to monitor improvements in patients' mobility over time and adjust treatment plans accordingly.</p>
+            <img src="assets/Gait/Gait3.jpg" alt="AI Analysis Dashboard">
+            <p>When analysing, the system visualizes movement paths for the head, hip center, and feet and detect walking patterns while providing real time metrics (Due to lack of space, I am unable to display the full body). </p>
+        </div>
+        <div class="slideshow-slide">
+            <img src="assets/Gait/Gait4.jpg" alt="Patient Progress Tracking">
+            <p>Once analysis is completed, a calculated score will appear with the GIF reaction. The system will provide recommendation based on the overall score as well. </p>
         </div>
         <button id="gait-prev-slide" class="slide-nav" aria-label="Previous slide">&#10094;</button>
         <button id="gait-next-slide" class="slide-nav" aria-label="Next slide">&#10095;</button>
@@ -1083,20 +1087,40 @@
 <div id="frailty-slideshow-overlay" class="slideshow-overlay hidden" aria-hidden="true">
     <div class="slideshow-container" id="frailty-slideshow-container">
         <div class="slideshow-slide">
-            <img src="assets/frailty/frailty1.jpg" alt="Clinical Frailty Scale Tool">
-            <p>Developed a digital assessment tool for healthcare professionals to evaluate patient frailty levels using standardized clinical criteria.</p>
+            <img src="assets/CFS/CFS3.jpg" alt="Clinical Frailty Scale Tool">
+            <p>Developed an Advanced Clinical Frailty Scale Assessment using AI-powered motion analysis for objective frailty assessment. First, we provide user time to prepare. </p>
         </div>
         <div class="slideshow-slide">
-            <img src="assets/frailty/frailty2.jpg" alt="Assessment Interface">
-            <p>Created an intuitive interface guiding healthcare providers through the assessment process, ensuring accurate and consistent evaluations.</p>
+            <img src="assets/CFS/CFS4.jpg" alt="Assessment Interface">
+            <p>After 10 seconds of preparation time, user will begin their First Movement, which is to stand straight and raise arms slowly to shoulder height, then lower them. User will repeat this as much as possible for 30 seconds. </p>
         </div>
         <div class="slideshow-slide">
-            <img src="assets/frailty/frailty3.jpg" alt="Automated Scoring System">
-            <p>Implemented an automated scoring system that instantly calculates frailty levels based on input data, eliminating manual calculation errors.</p>
+            <img src="assets/CFS/CFS5.jpg" alt="Automated Scoring System">
+            <p>Next, we provide user 10 seconds of rest time, so that user could prepare for Second Movement. If more time is needed, user could click on "Stop Assessment" button and start again when they are ready. </p>
         </div>
         <div class="slideshow-slide">
-            <img src="assets/frailty/frailty4.jpg" alt="Recommendation Engine">
-            <p>Developed an intelligent recommendation engine suggesting appropriate interventions and care plans based on individual patient frailty scores and needs.</p>
+            <img src="assets/CFS/CFS6.jpg" alt="Recommendation Engine">
+            <p>The Second Movement requires user to keep their posture straight and turn their head slowly from side to side. User will repeat this as much as possible for 30 seconds.</p>
+        </div>
+        <div class="slideshow-slide">
+            <img src="assets/CFS/CFS7.jpg" alt="Clinical Frailty Scale Tool">
+            <p>Another 10 seconds of rest time is provided, so that user could prepare for Third Movement. If more time is needed, user could click on "Stop Assessment" button and start again when they are ready.</p>
+        </div>
+        <div class="slideshow-slide">
+            <img src="assets/CFS/CFS8.jpg" alt="Assessment Interface">
+            <p>The Third Movement requires user to perform a gentle walking motion in place if they feel stable. User will repeat this as much as possible for 30 seconds.</p>
+        </div>
+        <div class="slideshow-slide">
+            <img src="assets/CFS/CFS9.jpg" alt="Automated Scoring System">
+            <p>Another 10 seconds of rest time is provided, so that user could prepare for Last Movement. If more time is needed, user could click on "Stop Assessment" button and start again when they are ready.</p>
+        </div>
+        <div class="slideshow-slide">
+            <img src="assets/CFS/CFS10.jpg" alt="Recommendation Engine">
+            <p>The Last Movement requires user to perform a slow sit-to-stand motion if they feel safe or there is support nearby. User will repeat this as much as possible for 30 seconds.</p>
+        </div>
+        <div class="slideshow-slide">
+            <img src="assets/CFS/CFS11.jpg" alt="Recommendation Engine">
+            <p>Lastly, the system will accumulate all metrics from each movements, calculate the score and provide recommendations to user. However, despite webcam video processing are used to detect and analyze movement, it can't ensure if user is doing the movement correctly. </p>
         </div>
         <button id="frailty-prev-slide" class="slide-nav" aria-label="Previous slide">&#10094;</button>
         <button id="frailty-next-slide" class="slide-nav" aria-label="Next slide">&#10095;</button>
