Redirected NPath and ReachOut to Figma

--- a/index.html
+++ b/index.html
@@ -494,34 +494,39 @@
                                 <p class="project-description">Developed a community support platform connecting
                                     volunteers with people in need, featuring real-time messaging, event coordination,
                                     and resource sharing.</p>
-                                <button id="open-reachout-slideshow" class="led-button"
-                                    aria-label="Open ReachOut slideshow">
+                                <a href="https://www.figma.com/design/kGzgcVEILahRlj1F8FDop5/DUXAssignment1---ReachOut?node-id=126-110&p=f&t=CfHxbkecUc9vlWgD-0" 
+                                   target="_blank" rel="noopener" 
+                                   class="led-button"
+                                   aria-label="Open ReachOut Figma prototype">
                                     <span>View Project</span>
-                                </button>
+                                </a>
                             </div>
                         </div>
                     </div>
 
                     <!-- NPath - Management -->
-                    <div class="card project-card" data-category="management" tabindex="0">
+                    <div class="card project-card" data-category="web" tabindex="0">
                         <div class="card-inner">
                             <div class="card-front">
                                 <div class="card-overlay"></div>
-                                <div class="card-icon"><i class="fas fa-project-diagram"></i></div>
-                                <h3 class="card-title">NPath</h3>
-                                <p class="card-tag">Project Management</p>
+                                <div class="card-icon"><i class="fas fa-hands-helping"></i></div>
+                                <h3 class="card-title">ReachOut</h3>
+                                <p class="card-tag">Web Development</p>
                             </div>
                             <div class="card-back">
-                                <p class="project-description">Led the development of a project management tool
-                                    specifically designed for IT teams, incorporating agile methodologies and
-                                    customizable workflow templates.</p>
-                                <button id="open-npath-slideshow" class="led-button" aria-label="Open NPath slideshow">
+                                <p class="project-description">Developed a community support platform connecting
+                                    volunteers with people in need, featuring real-time messaging, event coordination,
+                                    and resource sharing.</p>
+                                <a href="https://www.figma.com/design/kGzgcVEILahRlj1F8FDop5/DUXAssignment1---ReachOut?node-id=126-110&p=f&t=CfHxbkecUc9vlWgD-0" 
+                                   target="_blank" rel="noopener" 
+                                   class="led-button"
+                                   aria-label="Open ReachOut Figma prototype">
                                     <span>View Project</span>
-                                </button>
+                                </a>
                             </div>
                         </div>
                     </div>
-
+                    
                     <!-- Canva Editor - Web Development -->
                     <div class="card project-card" data-category="web" tabindex="0">
                         <div class="card-inner">
