NPath detail modified

--- a/index.html
+++ b/index.html
@@ -514,9 +514,9 @@
                                 <p class="card-tag">Project Management</p>
                             </div>
                             <div class="card-back">
-                                <p class="project-description">Led the development of a project management tool
-                                    specifically designed for IT teams, incorporating agile methodologies and
-                                    customizable workflow templates.</p>
+                                <p class="project-description">Ngee Ann Polytechnic's advanced intuitive campus guide to 
+                                    help visitors and freshies become familiar with campus pathways. 
+                                </p>
                                 <a href="https://www.figma.com/design/oCMi00bXf1kP6VnezdN1Jl/TeamPeanut_DUX_Asg2?node-id=0-1&p=f&t=p9qetWp86tFJuVB5-0" 
                                    target="_blank" rel="noopener" 
                                    class="led-button"
